# Bratislava-Rust-Meetup

./: README.md
past_talks/2023-03-07-rust-idioms/: Makefile  README.md  serde.d2  talk.html  talk.md
past_talks/2023-03-07-rust-idioms/samples/01_functional_result_option/: Cargo.toml
past_talks/2023-03-07-rust-idioms/samples/01_functional_result_option/src/: lib.rs
past_talks/2023-03-07-rust-idioms/samples/02_contest/: Cargo.toml
past_talks/2023-03-07-rust-idioms/samples/02_contest/src/: lib.rs
past_talks/2023-03-07-rust-idioms/samples/02_matrix_transpose/: Cargo.toml
past_talks/2023-03-07-rust-idioms/samples/02_matrix_transpose/src/: lib.rs
past_talks/2023-06-28-unsafe-rust/: README.md
past_talks/2023-11-07-aws-lambda/demo/: .dockerignore  .gitignore  Dockerfile.demo-lambda
past_talks/2023-11-07-aws-lambda/demo/lambda-demo/: Cargo.toml  Makefile
past_talks/2023-11-07-aws-lambda/demo/lambda-demo/src/: main.rs
past_talks/2023-11-07-aws-lambda/demo/lambda-demo/src/telemetry/: event_context_extractor.rs  metrics.rs  mod.rs  telemetry_error.rs  telemetry_lambda.rs  tracer.rs
past_talks/2023-11-07-aws-lambda/demo/terraform/deployments/: terragrunt.hcl
past_talks/2023-11-07-aws-lambda/demo/terraform/deployments/dev/us-west-2/: region.hcl
past_talks/2023-11-07-aws-lambda/demo/terraform/modules/lambda-demo/: README.md  cloudwatch-logs.tf  iam.tf  lambda.tf  locals.tf  outputs.tf  variables.tf
past_talks/2024-04-16-axum/: Makefile  README.md  crystallite.theme  slidy_black.css  talk.html  talk.md
past_talks/2024-09-23-error-handling/: README.md
(+11 files in other folders)
